--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mdx-js/react": "^1.0.21",
     "gatsby": "^2.3.16",
     "gatsby-background-image": "^0.7.2",
+    "gatsby-image": "^2.1.4",
     "gatsby-mdx": "^0.6.3",
     "gatsby-plugin-emotion": "^4.0.7",
     "gatsby-plugin-react-helmet": "^3.0.12",
