--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gatsby-plugin-emotion": "^4.0.7",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-sharp": "^2.1.6",
+    "gatsby-remark-images": "^3.0.16",
     "gatsby-source-filesystem": "^2.0.40",
     "gatsby-transformer-sharp": "^2.1.21",
     "react": "^16.8.6",
