--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gatsby-plugin-sharp": "^2.1.6",
     "gatsby-remark-images": "^3.0.16",
     "gatsby-source-filesystem": "^2.0.40",
+    "gatsby-source-instagram": "^0.5.0",
     "gatsby-transformer-sharp": "^2.1.21",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
